// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`executeGitMoveForRepo Execute default plan: results from move to new 1`] = `
Array [
  Object {
    "moves": Array [
      Object {
        "from": "lib/mapping.ts",
        "to": "src/mapping.ts",
      },
    ],
  },
]
`;

exports[`executeGitMoveForRepo Execute default plan: results from move to test_fixtures 1`] = `
Array [
  Object {
    "moves": Array [
      Object {
        "from": "lib/__tests__/test_fixtures.ts",
        "to": "src/__tests__/test_fixtures.ts",
      },
    ],
  },
]
`;

exports[`executeGitMoveForRepo test setup successful and matches snapshot 1`] = `
Map {
  "test_fixtures" => Array [
    Array [
      "lib/__tests__/test_fixtures.ts",
      "src/__tests__/test_fixtures.ts",
    ],
  ],
  "new" => Array [
    Array [
      "lib/mapping.ts",
      "src/mapping.ts",
    ],
  ],
}
`;

exports[`executeGitMoveForRepos Complete simple split 1`] = `
Map {
  "test_fixtures" => Array [
    Array [
      "lib/__tests__/test_fixtures.ts",
      "src/__tests__/test_fixtures.ts",
    ],
  ],
  "new" => Array [
    Array [
      "lib/mapping.ts",
      "src/mapping.ts",
    ],
  ],
}
`;

exports[`executeGitMoveForRepos Complete simple split 2`] = `
Array [
  Object {
    "moves": Array [
      Object {
        "from": "lib/__tests__/test_fixtures.ts",
        "to": "src/__tests__/test_fixtures.ts",
      },
    ],
  },
  Object {
    "moves": Array [
      Object {
        "from": "lib/mapping.ts",
        "to": "src/mapping.ts",
      },
    ],
  },
]
`;

exports[`prepareGitMove Should run and match the snapshot 1`] = `
Map {
  "test_fixtures" => Array [
    Array [
      "lib/__tests__/test_fixtures.ts",
      "src/__tests__/test_fixtures.ts",
    ],
  ],
  "new" => Array [
    Array [
      "lib/mapping.ts",
      "src/mapping.ts",
    ],
  ],
}
`;
